[project]
name = "adam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "datasets>=4.8.4",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "huggingface-hub>=1.10.2",
    "pyarrow>=23.0.1",
    "pandas>=3.0.2",
    "sentence-transformers>=5.4.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
    "peft>=0.19.1",
    "bitsandbytes>=0.41.0",
    "torch>=2.11.0",
    "accelerate>=1.13.0",
    "chromadb>=1.5.8",
    "python-multipart>=0.0.26",
]
